--- a/basichttp/404.html
+++ b/basichttp/404.html
@@ -2,7 +2,7 @@
     <head>
         <style>
             body{
-                color: darkolivegreen;
+                color: blue;
                 text-align: center;
             }
         </style>
